fixed imgs display  on mobile in menu pages

--- a/css/main.css
+++ b/css/main.css
@@ -889,13 +889,14 @@ body {
 }
 .menu-page__picture-wrapper {
   transform: translateY(50px);
-  height: 500px;
+  max-height: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .menu-page__picture {
   width: 100%;
+  height: 100%;
   display: block;
   object-fit: cover;
 }
